--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
 		<dependency>
 		  	<groupId>com.stackify</groupId>
   			<artifactId>stackify-api</artifactId>
-  			<version>1.0.3</version>
+  			<version>1.0.4-SNAPSHOT</version>
 		</dependency>
 				
 		<dependency>
