--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.stackify</groupId>
 	<artifactId>stackify-log-log4j12</artifactId>
-	<version>1.0.4-SNAPSHOT</version>
+	<version>1.0.4</version>
 	
 	<name>Stackify Log Appender for Log4j</name>
 	<description>Stackify Log Appender for Log4j</description>
@@ -50,13 +50,13 @@
 		<dependency>
 		  	<groupId>com.stackify</groupId>
   			<artifactId>stackify-api</artifactId>
-  			<version>1.0.5-SNAPSHOT</version>
+  			<version>1.0.5</version>
 		</dependency>
 				
 		<dependency>
 		  	<groupId>com.stackify</groupId>
   			<artifactId>stackify-api-common</artifactId>
-  			<version>1.0.8-SNAPSHOT</version>
+  			<version>1.0.8</version>
 		</dependency>
 				
 		<dependency>
