--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
 		<dependency>
 		  	<groupId>com.stackify</groupId>
   			<artifactId>stackify-api-common</artifactId>
-  			<version>1.0.10</version>
+  			<version>1.0.12-SNAPSHOT</version>
 		</dependency>
 				
 		<dependency>
