--- a/pom.xml
+++ b/pom.xml
@@ -46,17 +46,11 @@
 	<dependencies>
 	
 		<!-- Compile time dependencies -->
-		
+						
 		<dependency>
 		  	<groupId>com.stackify</groupId>
-  			<artifactId>stackify-api</artifactId>
-  			<version>1.0.5</version>
-		</dependency>
-				
-		<dependency>
-		  	<groupId>com.stackify</groupId>
-  			<artifactId>stackify-api-common</artifactId>
-  			<version>1.0.14</version>
+  			<artifactId>stackify-api-java</artifactId>
+  			<version>2.0.0</version>
 		</dependency>
 				
 		<dependency>
