--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.stackify</groupId>
 	<artifactId>stackify-log-log4j12</artifactId>
-	<version>1.0.15-SNAPSHOT</version>
+	<version>1.0.15</version>
 	
 	<name>Stackify Log Appender for Log4j</name>
 	<description>Stackify Log Appender for Log4j</description>
@@ -68,7 +68,7 @@
 		<dependency>
 		  	<groupId>com.stackify</groupId>
   			<artifactId>stackify-api-java</artifactId>
-  			<version>2.0.3-SNAPSHOT</version>
+  			<version>2.0.3</version>
 		</dependency>
 								
 		<!-- Runtime dependencies -->
