--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
 		<dependency>
 		  	<groupId>com.stackify</groupId>
   			<artifactId>stackify-api-java</artifactId>
-  			<version>2.1.9-SNAPSHOT</version>
+  			<version>3.0.0</version>
 		</dependency>
 								
 		<!-- Runtime dependencies -->
