--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.stackify</groupId>
 	<artifactId>stackify-log-log4j12</artifactId>
 	<version>2.0.3-SNAPSHOT</version>
-	
+
 	<name>Stackify Log Appender for Log4j</name>
 	<description>Stackify Log Appender for Log4j</description>
 	<url>https://github.com/stackify/stackify-log-log4j12</url>
@@ -13,7 +13,7 @@
 		<artifactId>oss-parent</artifactId>
 		<version>9</version>
 	</parent>
-	
+
 	<licenses>
     	<license>
         	<name>The Apache Software License, Version 2.0</name>
@@ -31,40 +31,45 @@
         <name>Stackify, LLC</name>
         <url>http://www.stackify.com</url>
     </organization>
-        
+
     <developers>
     	<developer>
     		<id>eric-martin</id>
 			<name>Eric Martin</name>
     	</developer>
+		<developer>
+			<id>darinhoward</id>
+			<name>Darin Howard</name>
+		</developer>
     </developers>
-        
+
     <properties>
         <java.version>1.6</java.version>
     </properties>
 
 	<dependencies>
-	
+
 		<!-- Compile time dependencies -->
-					
+
+		<dependency>
+			<groupId>com.stackify</groupId>
+			<artifactId>stackify-api-java</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.1.3</version>
+			<version>2.8.11</version>
 		</dependency>
-				
+
 		<dependency>
 		  	<groupId>log4j</groupId>
   			<artifactId>log4j</artifactId>
   			<version>1.2.17</version>
 		</dependency>
-					
-		<dependency>
-		  	<groupId>com.stackify</groupId>
-  			<artifactId>stackify-api-java</artifactId>
-  			<version>3.0.4</version>
-		</dependency>
-								
+
+
 		<!-- Runtime dependencies -->
 
 		<!-- Provided dependencies -->
@@ -77,7 +82,7 @@
 		</dependency>
 
 		<!-- Test dependencies -->
-		
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
@@ -91,46 +96,46 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<version>1.9.5</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 		    <groupId>org.powermock</groupId>
     		<artifactId>powermock-core</artifactId>
       		<version>1.5.6</version>
       		<scope>test</scope>
    		</dependency>
-		
+
 		<dependency>
       		<groupId>org.powermock</groupId>
       		<artifactId>powermock-module-junit4</artifactId>
       		<version>1.5.6</version>
       		<scope>test</scope>
    		</dependency>
-   		
+
    		<dependency>
       		<groupId>org.powermock</groupId>
       		<artifactId>powermock-api-mockito</artifactId>
       		<version>1.5.6</version>
       		<scope>test</scope>
    		</dependency>
-		
+
 	</dependencies>
-	
+
 	<build>
-    
+
     	<resources>
 			<resource>
 				<directory>src/main/resources</directory>
 				<filtering>true</filtering>
 			</resource>
 		</resources>
-    
+
 		<extensions>
 			<extension>
 				<groupId>org.apache.maven.wagon</groupId>
@@ -138,9 +143,9 @@
 				<version>2.2</version>
 			</extension>
 		</extensions>
-		
+
 		<plugins>
-		
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -150,7 +155,7 @@
 					<target>${java.version}</target>
 				</configuration>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
@@ -161,7 +166,7 @@
 					</archive>
 				</configuration>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
@@ -178,7 +183,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
@@ -191,7 +196,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
@@ -206,7 +211,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
@@ -217,7 +222,7 @@
 					</formats>
 				</configuration>
 			</plugin>
-			
+
 			<plugin>
     			<groupId>org.eluder.coveralls</groupId>
     			<artifactId>coveralls-maven-plugin</artifactId>
@@ -225,23 +230,23 @@
 			</plugin>
 
 		</plugins>
-		
+
 	</build>
 
 	<reporting>
-	
+
 		<plugins>
-			
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.9.1</version>
 			</plugin>
-			
+
 		</plugins>
-		
+
 	</reporting>
-		
+
 	<profiles>
 		<profile>
 			<id>release-sign-artifacts</id>
@@ -271,5 +276,5 @@
 			</build>
 		</profile>
 	</profiles>
-	
+
 </project>
