--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.stackify</groupId>
 	<artifactId>stackify-log-log4j12</artifactId>
-	<version>2.1.3-SNAPSHOT</version>
+	<version>4.0.0-SNAPSHOT</version>
 
 	<name>Stackify Log Appender for Log4j</name>
 	<description>Stackify Log Appender for Log4j</description>
@@ -44,7 +44,7 @@
     </developers>
 
     <properties>
-        <java.version>1.6</java.version>
+        <java.version>1.8</java.version>
     </properties>
 
 	<dependencies>
@@ -54,13 +54,13 @@
 		<dependency>
 			<groupId>com.stackify</groupId>
 			<artifactId>stackify-api-java</artifactId>
-			<version>3.1.2</version>
+			<version>4.0.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.8.11.3</version>
+			<version>2.9.9.3</version>
 		</dependency>
 
 		<dependency>
@@ -212,23 +212,6 @@
 				</executions>
 			</plugin>
 
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>2.6</version>
-				<configuration>
-					<formats>
-						<format>xml</format>
-					</formats>
-				</configuration>
-			</plugin>
-
-			<plugin>
-    			<groupId>org.eluder.coveralls</groupId>
-    			<artifactId>coveralls-maven-plugin</artifactId>
-    			<version>2.2.0</version>
-			</plugin>
-
 		</plugins>
 
 	</build>
@@ -241,6 +224,10 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.9.1</version>
+				<configuration>
+					<failOnError>false</failOnError>
+					<additionalparam>-Xdoclint:none</additionalparam>
+				</configuration>
 			</plugin>
 
 		</plugins>
