--- a/pom.xml
+++ b/pom.xml
@@ -54,13 +54,25 @@
 		<dependency>
 			<groupId>com.stackify</groupId>
 			<artifactId>stackify-api-java</artifactId>
-			<version>4.0.0</version>
+			<version>4.0.1</version>
+		</dependency>
+
+    <dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.12.7</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.12.7</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.9.10.5</version>
+			<version>2.12.6.1</version>
 		</dependency>
 
 		<dependency>
@@ -93,35 +105,35 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>4.13.1</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>1.9.5</version>
+			<version>2.8.9</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 		    <groupId>org.powermock</groupId>
     		<artifactId>powermock-core</artifactId>
-      		<version>1.5.6</version>
+      		<version>1.7.4</version>
       		<scope>test</scope>
    		</dependency>
 
 		<dependency>
       		<groupId>org.powermock</groupId>
       		<artifactId>powermock-module-junit4</artifactId>
-      		<version>1.5.6</version>
+      		<version>1.7.4</version>
       		<scope>test</scope>
    		</dependency>
 
    		<dependency>
       		<groupId>org.powermock</groupId>
-      		<artifactId>powermock-api-mockito</artifactId>
-      		<version>1.5.6</version>
+      		<artifactId>powermock-api-mockito2</artifactId>
+      		<version>1.7.4</version>
       		<scope>test</scope>
    		</dependency>
 
